# NCD-04--art-demo

./: Cargo.toml  README.md  package-lock.json  package.json
assembly/: index.ts  models.ts
contract/: Cargo.toml  package-lock.json
contract/src/: contract.ts  design.rs  generate.rs  generate.ts  lib.rs  models.ts
integration-tests/src/: main.ava.ts  tests.rs
src/: generate.rs  lib.rs  models.rs
